--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "3c24e884-fd8b-4642-9948-3255f4665db5"
 authors = ["contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+
 [compat]
 julia = "1"
 
